More cleanup and +@ in todo

--- a/testFiles/todo.txt
+++ b/testFiles/todo.txt
@@ -1,7 +1,7 @@
-2021-10-06 This
-2021-11-08 is
+2021-10-06 This +HasProject
+2021-11-08 is @context
 2021-11-08 my
-2021-11-08 test
+2021-11-08 test +Project @mycontext
 2021-11-08 list
 2021-11-08 it
 2021-11-08 is
@@ -9,7 +9,7 @@
 2021-11-08 enough
 2021-11-08 to
 2021-11-08 scroll
-2021-11-08 vertically
+2021-11-08 vertically due:2021-11-26 rec:w +vertical @notHorizontal
 2021-11-08 And also some of the tasks could be scrolled horizontally if they are too long, to be honest i think this length of task description is far too long to be productive but needs to be tested
 2021-11-08 Progress
 2021-11-08 is
@@ -28,4 +28,3 @@
 2021-11-08 more
 2021-11-08 readable
 2021-11-08 language
-
