Added some task styling possibly change to todo_lib for parsing

--- a/testFiles/todo.txt
+++ b/testFiles/todo.txt
@@ -19,7 +19,7 @@
 2021-11-08 learning
 2021-11-08 curve
 2021-11-08 is
-2021-11-08 interesting
+2021-11-08 interesting #TAAAGGGS
 2021-11-08 java
 2021-11-08 script
 2021-11-08 is
