Added Dependant styling based off the status of the task

--- a/testFiles/todo.txt
+++ b/testFiles/todo.txt
@@ -6,7 +6,7 @@
 2021-11-08 it
 2021-11-08 is
 2021-11-08 long
-2021-11-08 enough
+2021-11-08 enough due:2022-07-20
 2021-11-08 to
 2021-11-08 scroll
 2021-11-08 vertically due:2021-11-26 rec:w +vertical @notHorizontal
